feat(settings): add language settings section with reset functionality
- Introduced a new language settings section in the SettingsScreen, allowing users to view and reset to the system language.
- Updated SettingsPreferences to include icons for language, theme, location, and auto-play settings.
- Enhanced localization files with new keys for language settings and reset confirmation messages.
- Implemented resetToSystemLocale method in LocaleService to facilitate language reset functionality.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,52 @@
 {
+  "settings_title": "Settings",
+  "settings_language_system": "System Language",
+  "settings_language_current": "Current Language",
+  "settings_language_reset": "Reset to System Language",
+  "settings_language_reset_confirmation": "Do you want to reset the language to system language?",
+  "settings_language_reset_success": "Language has been reset to system language",
+  "settings_language_reset_error": "Error resetting language",
+  "theme_light": "Light",
+  "theme_dark": "Dark",
+  "theme_system": "System",
+  "app_name": "CityPulse",
+  "welcome_title": "Welcome to CityPulse",
+  "welcome_subtitle": "Discover the best activities and places in your city",
+  "signup_title": "Sign Up",
+  "signup_email": "Email",
+  "signup_password": "Password",
+  "signup_confirm_password": "Confirm password",
+  "signup_button": "Sign Up",
+  "signin_title": "Sign In",
+  "signin_email": "Email",
+  "signin_password": "Password",
+  "signin_button": "Sign In",
+  "forgot_password": "Forgot password?",
+  "interests_title": "Interest Setup",
+  "interests_subtitle": "Select your interests",
+  "interests_button": "Save my interests",
+  "interests_add_custom": "Add custom interest",
+  "favorites_title": "My Favorites",
+  "favorites_category": "Categories",
+  "settings_notifications": "Notifications",
+  "settings_preferences": "Preferences",
+  "settings_about": "About",
+  "settings_notifications_push": "Push Notifications",
+  "settings_notifications_email": "Email",
+  "settings_notifications_tour_updates": "Tour Updates",
+  "settings_notifications_event_reminders": "Event Reminders",
+  "settings_theme": "Theme",
+  "settings_language": "Language",
+  "settings_location": "Location",
+  "settings_videos": "Videos",
+  "settings_version": "Version",
+  "settings_privacy_policy": "Privacy Policy",
+  "settings_terms_of_service": "Terms of Service",
+  "settings_contact": "Contact",
+  "settings_save": "Save",
+  "settings_cancel": "Cancel",
+  "settings_error": "Error",
+  "settings_success": "Success"}
   "app_name": "CityPulse",
   "welcome_title": "Welcome to CityPulse",
   "welcome_subtitle": "Discover the best activities and places in your city",
