--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,4 +1,52 @@
 {
+  "settings_title": "Paramètres",
+  "settings_language_system": "Langue système",
+  "settings_language_current": "Langue actuelle",
+  "settings_language_reset": "Réinitialiser à la langue système",
+  "settings_language_reset_confirmation": "Voulez-vous réinitialiser la langue à la langue système ?",
+  "settings_language_reset_success": "La langue a été réinitialisée à la langue système",
+  "settings_language_reset_error": "Erreur lors de la réinitialisation de la langue",
+  "theme_light": "Clair",
+  "theme_dark": "Sombre",
+  "theme_system": "Système",
+  "app_name": "CityPulse",
+  "welcome_title": "Bienvenue sur CityPulse",
+  "welcome_subtitle": "Découvrez les meilleures activités et lieux de votre ville",
+  "signup_title": "Créer un compte",
+  "signup_email": "Email",
+  "signup_password": "Mot de passe",
+  "signup_confirm_password": "Confirmer le mot de passe",
+  "signup_button": "S'inscrire",
+  "signin_title": "Se connecter",
+  "signin_email": "Email",
+  "signin_password": "Mot de passe",
+  "signin_button": "Se connecter",
+  "forgot_password": "Mot de passe oublié ?",
+  "interests_title": "Configuration des Intérêts",
+  "interests_subtitle": "Sélectionnez vos intérêts",
+  "interests_button": "Enregistrer mes intérêts",
+  "interests_add_custom": "Ajouter un intérêt personnalisé",
+  "favorites_title": "Mes Favoris",
+  "favorites_category": "Catégories",
+  "settings_notifications": "Notifications",
+  "settings_preferences": "Préférences",
+  "settings_about": "À propos",
+  "settings_notifications_push": "Notifications push",
+  "settings_notifications_email": "Email",
+  "settings_notifications_tour_updates": "Mises à jour des visites",
+  "settings_notifications_event_reminders": "Rappels des événements",
+  "settings_theme": "Thème",
+  "settings_language": "Langue",
+  "settings_location": "Localisation",
+  "settings_videos": "Vidéos",
+  "settings_version": "Version",
+  "settings_privacy_policy": "Politique de confidentialité",
+  "settings_terms_of_service": "Conditions d'utilisation",
+  "settings_contact": "Contact",
+  "settings_save": "Enregistrer",
+  "settings_cancel": "Annuler",
+  "settings_error": "Erreur",
+  "settings_success": "Succès"}
   "app_name": "CityPulse",
   "welcome_title": "Bienvenue sur CityPulse",
   "welcome_subtitle": "Découvrez les meilleures activités et lieux de votre ville",
