--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,4 +1,30 @@
 {
+  "app_name": "CityPulse",
+  "welcome_title": "Bienvenue sur CityPulse",
+  "welcome_subtitle": "Découvrez les meilleures activités et lieux de votre ville",
+  
+  "signup_title": "Créer un compte",
+  "signup_email": "Email",
+  "signup_password": "Mot de passe",
+  "signup_confirm_password": "Confirmer le mot de passe",
+  "signup_button": "S'inscrire",
+  
+  "signin_title": "Se connecter",
+  "signin_email": "Email",
+  "signin_password": "Mot de passe",
+  "signin_button": "Se connecter",
+  "forgot_password": "Mot de passe oublié ?",
+  
+  "interests_title": "Configuration des Intérêts",
+  "interests_subtitle": "Sélectionnez vos intérêts",
+  "interests_button": "Enregistrer mes intérêts",
+  "interests_add_custom": "Ajouter un intérêt personnalisé",
+  
+  "favorites_title": "Mes Favoris",
+  "favorites_category": "Catégories",
+  "favorites_filter": "Filtrer",
+  "favorites_empty": "Aucun favori trouvé",
+  
   "settings_title": "Paramètres",
   "settings_language_system": "Langue système",
   "settings_language_current": "Langue actuelle",
@@ -6,28 +32,6 @@
   "settings_language_reset_confirmation": "Voulez-vous réinitialiser la langue à la langue système ?",
   "settings_language_reset_success": "La langue a été réinitialisée à la langue système",
   "settings_language_reset_error": "Erreur lors de la réinitialisation de la langue",
-  "theme_light": "Clair",
-  "theme_dark": "Sombre",
-  "theme_system": "Système",
-  "app_name": "CityPulse",
-  "welcome_title": "Bienvenue sur CityPulse",
-  "welcome_subtitle": "Découvrez les meilleures activités et lieux de votre ville",
-  "signup_title": "Créer un compte",
-  "signup_email": "Email",
-  "signup_password": "Mot de passe",
-  "signup_confirm_password": "Confirmer le mot de passe",
-  "signup_button": "S'inscrire",
-  "signin_title": "Se connecter",
-  "signin_email": "Email",
-  "signin_password": "Mot de passe",
-  "signin_button": "Se connecter",
-  "forgot_password": "Mot de passe oublié ?",
-  "interests_title": "Configuration des Intérêts",
-  "interests_subtitle": "Sélectionnez vos intérêts",
-  "interests_button": "Enregistrer mes intérêts",
-  "interests_add_custom": "Ajouter un intérêt personnalisé",
-  "favorites_title": "Mes Favoris",
-  "favorites_category": "Catégories",
   "settings_notifications": "Notifications",
   "settings_preferences": "Préférences",
   "settings_about": "À propos",
@@ -46,37 +50,8 @@
   "settings_save": "Enregistrer",
   "settings_cancel": "Annuler",
   "settings_error": "Erreur",
-  "settings_success": "Succès"}
-  "app_name": "CityPulse",
-  "welcome_title": "Bienvenue sur CityPulse",
-  "welcome_subtitle": "Découvrez les meilleures activités et lieux de votre ville",
-  "signup_title": "Créer un compte",
-  "signup_email": "Email",
-  "signup_password": "Mot de passe",
-  "signup_confirm_password": "Confirmer le mot de passe",
-  "signup_button": "S'inscrire",
-  "signin_title": "Se connecter",
-  "signin_email": "Email",
-  "signin_password": "Mot de passe",
-  "signin_button": "Se connecter",
-  "forgot_password": "Mot de passe oublié ?",
-  "interests_title": "Configuration des Intérêts",
-  "interests_subtitle": "Sélectionnez vos intérêts",
-  "interests_button": "Enregistrer mes intérêts",
-  "interests_add_custom": "Ajouter un intérêt personnalisé",
-  "favorites_title": "Mes Favoris",
-  "favorites_category": "Catégories",
-  "favorites_filter": "Filtrer",
-  "favorites_empty": "Aucun favori trouvé",
-  "settings_title": "Paramètres",
-  "settings_profile": "Profil",
-  "settings_notifications": "Notifications",
-  "settings_preferences": "Préférences",
-  "settings_about": "À propos",
-  "settings_language": "Langue",
-  "settings_theme": "Thème",
-  "settings_location": "Localisation",
-  "settings_videos": "Vidéos",
+  "settings_success": "Succès",
+  
   "theme_light": "Clair",
   "theme_dark": "Sombre",
   "theme_system": "Système",
